Travel::Status::DE::DeutscheBahn 0.04 - Wed Jul 13 2011

    [Travel::Status::DE::DeutscheBahn::Result]
    * The info accessor now strips the mostly useless "k.A." / "pünktlich"
      (train on time) text parts
    * Add (slightly experimental) route_interesting accessor
    * Add delay accessor

Travel::Status::DE::DeutscheBahn 0.03 - Wed Jul 13 2011

    * Clarify derl dependency (we actually need >= 5.10.1)

    [Travel::Status::DE::DeutscheBahn]
    * Strip leading / trailing whitespace in result fields

Travel::Status::DE::DeutscheBahn 0.02 - Wed Jul 06 2011

    [db-ris]
    * Only display info when a train is late, not when on time / unknown
    * Add --ignore-late option

    [Travel::Status::DE::DeutscheBahn]
    * Add route_raw accessor
    * Proper HTTP request error handling
    * Strip leading whitespace from ::Result info
    * Do not include canceled stops in the route

Travel::Status::DE::DeutscheBahn 0.01 - Mon Jun 27 2011

    * Initial release
    * Crawls almost all data available in the web interface