@@ -16,13 +16,13 @@ Hash: SHA256
 
 SHA1 8146267b09af8157aa67eb220b0b6ad3d5c61303 Build.PL
 SHA1 d0f2060d740ce428f14c47b7f9cc2c65bf66cd7b COPYING
-SHA1 28b3d50b30acd9de61010ec28b72b6607256c65a Changelog
+SHA1 f353d0dfa0e386bb59bbcac2ac84386ab48a9b45 Changelog
 SHA1 aab725d3ceafacba619988601b393aa3d20b543c MANIFEST
-SHA1 eb3dc78a0f0884e289f1f2bb6d691808d6086a38 META.yml
+SHA1 f37c0b41fa3f391ed62ad8a2ff2a468b714e7375 META.yml
 SHA1 bbff2d44f9fa2c89eb7666e6154eec9e810de913 README
-SHA1 f0aafadc0bee1a357c224ce215e7c60b0a7b0ce2 bin/db-ris
-SHA1 3e3798e064f152636d8ef01717c7a5ed742d7d63 lib/Travel/Status/DE/DeutscheBahn.pm
-SHA1 cd6b9500cb5d6b629f7b482986b1c230c4ad8661 lib/Travel/Status/DE/DeutscheBahn/Result.pm
+SHA1 b12dcfd2306e578883cfe7c7a7438a76e16b0bca bin/db-ris
+SHA1 03e33665ee7672cea70fe1246c6a20ddb0b46c64 lib/Travel/Status/DE/DeutscheBahn.pm
+SHA1 c8d0ace3b66b6ded88ef1218065cadbc0a924ed5 lib/Travel/Status/DE/DeutscheBahn/Result.pm
 SHA1 6cfaebdb4d57688b8ac50f3e840a99a48c15457b t/00-compile-pm.t
 SHA1 3adfc7da6082f15051da7fbda884723388738b61 t/01-compile-pl.t
 SHA1 fd251ffc56ca6e52020c906b61158f78b035679d t/10-pod-coverage.t
@@ -31,17 +31,17 @@ SHA1 d406786e99f134d2dcf15a220370ca17693c5a93 t/in/essen.html
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iQIcBAEBCAAGBQJOHb2zAAoJEBANW/tRZuAFmbAQAM1psviIToMB30mkY9cuSIy6
-/BkNDkysG96w+FiMysZFhXH+o1ayUBk8wHiRml6Wstya9ejv8P8IacnVAFCa1FHY
-EWxOuE0FkHETEJm/6OMAifOrF5BGGy4G9nvT+N/5HOrhyd10vvDHjhxazK9A3y4c
-ZnraHCGKWvPcw0JjPAQTQ95FPTwDkWtfM2NfTKOO22/IgvkHfdP6wV65jnGws7Vl
-e4inO8NPN5DSemfhJPyhYCt1iJw8yScx0E3O6fZKpf8aEx4tpVdb56E53kV21dEr
-TUSQHE+F2dfH9v5k5F3OO2doaVCvPj6Tu8EZSQSasGET8NYaTWhK+uIhznS1Q2Af
-vyZkOKjUKRrU5gKA+pgGDRmmZi+lyaW8WnzKEW4Dj5FuR2HM20Mn5iKwNmpb4+VU
-dRPq7JXNRNO0y6ti9HWlByJEWIk8WkgpLnSxojmtEwLV6PTwOkXclAzXkg0WlOeL
-h9Szadi21mwl50dTpD754I8Vp6GCr1w5iM8gDtULopTzU0WsCzoEcD6TRseryLwB
-iCuHJXCO6ulKJQMk0Ek4g+sv0Cw1q6PJFtsRWU/7+S1ZH/WxuxOIarlcarfuhyaz
-R81qsGp8eAN3oX7uYFkGs5sF5Q0p8FxfGOhPPrK18lvjPAiVx2qkSJ85AM1DmBcH
-ZbPHVdAJbksDIKM8pzYO
-=DG8/
+iQIcBAEBCAAGBQJOQTm3AAoJEBANW/tRZuAFMW0P/3gheHyMA+opmzmojZ2kTO/D
+HieZQYsxdGxNVmiLo8GYKO46avRvrMs4e+AWEiOyqMkYOnAvnx/CUepiYiLCrX5/
+c0j6fa9/KB8b3/82b8jK1pKyO0nmoHWaQNb0UCd/aV5uIRk6ff5c7GtVcTiGmJzx
+VkF/tKvzsD1OD3JcAehqk48tN066LeHSgmsxEf8hVZJa9ZAWiNS1/ymR/qdfUhE6
+Ez4uCkD55aXytgTXgSlQZ+CRLKq2+PwGxVw4vmuL2X8PURyNvavkvOf/awaU52fi
+MOEuNYbe0VJcPB/oxzkQwY9OqNGyGuw521Et4xNB9N1/1Fuc4YnU04n34ZeTohdo
+jzRXBTxyuVmM+0c4bXKbHJW3q7MVbXs83yHWbyoHpPNCYXHRCEKJvzuunwaNjse9
+qJl9si7E30hyn6ugthWZejSlUpuzYnMhYc4cc6UlAackWcng+Hp4f2UoC9jBU9w6
++dEV62/8SsHPwP4iQj1PY1qkFs1kS2d+c2uXPdszIysUN00YZK0pud2IydhrMDpf
+d8W6pkxshNmruvJfEAK2rISahHqp+VqJzBPXhdadvsrStYRbEMfye2Rverw6xzXS
+SaSl2cn5FmtE/gdAHehGXr0xY4V4L13AwTzEZPyyluHifox+dQHwrJ7+3WVUbcRn
+b4ZvGBbgALWMuzPCdo7b
+=A3wg
 -----END PGP SIGNATURE-----
