@@ -1,3 +1,11 @@
+Travel::Status::DE::DeutscheBahn 0.05 - Tue Aug 09 2011
+
+    [Travel::Status::DE::DeutscheBahn]
+    * Fix ->results returning duplicate connections when accessed more than
+      one time
+    * new: Only die when encountering wrong options, set ->errstr otherwise
+    * Adds new ->errstr accessor to check for request errors
+
 Travel::Status::DE::DeutscheBahn 0.04 - Wed Jul 13 2011
 
     [Travel::Status::DE::DeutscheBahn::Result]
